# gitlab-analysis-wasm

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  rust-toolchain.toml
examples/: index.html  styles.css
examples/gitlib-analysis/: .gitignore  README.md  index.css  index.html  index.tsx  main.tsx  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/gitlib-analysis/components/: CodeSizeChart.tsx  Fireworks.tsx
scripts/: build.js  update-pkg.js
src/: lib.rs
tests/: index.html
