# Cargo.toml
[package]
name = "gitlab-analysis-wasm"
version = "0.1.0"
edition = "2021"
description = "GitLab 代码分析工具的 WebAssembly 模块"

# 添加 wasm-pack 的配置
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']  # 最高级别优化

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
serde_json = "1.0"
futures = "0.3"
regex = "1.5"
once_cell = "1.8"

[dependencies.web-sys]
version = "0.3"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "console",
    "AbortController",
    "AbortSignal"
]

[features]
default = ["browser"]
browser = []
node = []